client/stylus/app.markdown.styl
@import "./client/Framework/themes/default/kdfn"
@import "./client/stylus/appfn"

// Markdown Styles - global

.has-markdown
  font-size                                       14px
  font-weight                                     300
  line-height                                     140%
  color                                           #5F5F5F

  h1,h2,h3,h4,h5,h6
    font-size                                     14px
    line-height                                   140%
    color                                         #FF9200
    font-weight                                   500
    border                                        none
    height                                        auto
    width                                         auto
    padding                                       0
    vendor margin-before                          0px
    vendor margin-after                           0px
    vendor margin-start                           0px
    vendor margin-end                             0px
    display                                       block
    margin-bottom                                 5px

  b,strong
    word-break break-all

  p
    white-space normal
    line-height                                   170%
    margin-bottom                                 15px

  pre
    font-size                                     14px
    font-weight                                   300

  code
    font-size                                     12px

  ul,ol
    margin-bottom                                 15px
    padding-left                                  10px

  > ol
    list-style                                    upper-roman inside

    ol
      list-style                                  decimal inside

    ul
      list-style                                  disc inside

  > ul
    list-style                                    disc inside

    ul
      list-style                                  disc inside

    ol
      list-style                                  decimal inside

  li
    padding-left                                  5px

  a
    font-size                                     14px
    font-weight                                   300
    noTextDeco()

  img
    width                                         auto
    // width                                         100%

  &.dark
    color  #888
    // h1,h2,h3,h4,h5,h6

    b,strong
      color #f5f5f5

    code
      bg color, #403C36
      color #aaa!important
      padding 1px 4px
      border 1px solid rgba(255,255,255,0.16)
      rounded 2px
      white-space pre
      // vendor transition, background-color 0.2s linear
      // &:hover
      //   bg color, lighten(#403C36,2%)


    pre
      // vendor transition, background-color 0.2s linear
      border 1px solid rgba(255,255,255,0.16)
      bg color, #403C36
      rounded 4px
      color #aaa!important
      > code
        border none
      // &:hover
      //   bg color, lighten(#403C36,2%)
      //   code
      //     bg color, lighten(#403C36,2%)

    a
      color #ff9200

  &.force-small-markdown
    *
      margin-top                                  0
      margin-bottom                               5px
      font-size                                   12px
      font-weight                                 400
      line-height                                 170%

    h1,h2,h3,h4,h5,h6
      font-size                                   12px

  > div.data-wrapper > span.data
  > span.data
  > div.data
    // > *:last-child
    //   margin-bottom 0px
    > pre
      padding                                     5px
      rounded                                     4px
      border                                      1px solid #ccc
      background-color                            transparent
      // vendor box-shadow, inset 0px 0px 5px rgba(0,0,0,0.15)

  .tomorrow-comment, pre .comment, pre .title
    color                                         #8e908c!important


  .tomorrow-red, pre .variable, pre .attribute, pre .tag, pre .regexp, pre .ruby .constant, pre .xml .tag .title, pre .xml .pi, pre .xml .doctype, pre .html .doctype, pre .css .id, pre .css .class, pre .css .pseudo
    color                                         #c82829!important


  .tomorrow-orange, pre .subst, pre .number, pre .preprocessor, pre .built_in, pre .literal, pre .params, pre .constant
    color                                         #f5871f!important


  .tomorrow-yellow, pre .class, pre .ruby .class .title, pre .css .rules .attribute
    color                                         #eab700!important


  .tomorrow-green, pre .string, pre .value, pre .inheritance, pre .header, pre .ruby .symbol, pre .xml .cdata
    color                                         #718c00!important


  .tomorrow-aqua, pre .css .hexcolor
    color                                         #3e999f!important


  .tomorrow-blue, pre .function, pre .python .decorator, pre .python .title, pre .ruby .function .title, pre .ruby .title .keyword, pre .perl .sub, pre .javascript .title, pre .coffeescript .title
    color                                         #4271ae!important


  .tomorrow-purple, pre .keyword, pre .javascript .function
    color                                         #8959a8!important


  pre code
    display                                       block
    background                                    transparent
    color                                         #4d4d4c!important
    font-family                                   Menlo, Monaco, Consolas, monospace
    line-height                                   1.5
    padding                                       10px

